tests/resources/invalid/type/definition/argument_after_argument_with_default.mamba
def my_fun(a: Int <- 10, b: Int) -> Int => a + b
